# mssql-orm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  prompt
.github/workflows/: ci.yml
crates/mssql-orm/: Cargo.toml
crates/mssql-orm-cli/: Cargo.toml
crates/mssql-orm-cli/src/: main.rs
crates/mssql-orm-core/: Cargo.toml
crates/mssql-orm-core/src/: lib.rs
crates/mssql-orm-macros/: Cargo.toml
crates/mssql-orm-macros/src/: lib.rs
crates/mssql-orm-migrate/: Cargo.toml
crates/mssql-orm-migrate/src/: diff.rs  filesystem.rs  lib.rs  operation.rs  snapshot.rs
crates/mssql-orm-query/: Cargo.toml
crates/mssql-orm-query/src/: delete.rs  expr.rs  insert.rs  join.rs  lib.rs  order.rs  select.rs  update.rs
crates/mssql-orm-sqlserver/: Cargo.toml
crates/mssql-orm-sqlserver/src/: compiler.rs  lib.rs  migration.rs  quoting.rs
crates/mssql-orm-sqlserver/tests/: compiler_snapshots.rs  migration_snapshots.rs
crates/mssql-orm-sqlserver/tests/snapshots/: compiler_snapshots__compiled_count.snap  compiler_snapshots__compiled_delete.snap  compiler_snapshots__compiled_insert.snap  compiler_snapshots__compiled_select.snap  compiler_snapshots__compiled_select_with_aliases.snap  compiler_snapshots__compiled_select_with_join.snap  compiler_snapshots__compiled_update.snap  migration_snapshots__advanced_foreign_key_migration_sql.snap  migration_snapshots__audit_column_migration_sql.snap  migration_snapshots__computed_column_migration_sql.snap  (+4 more)
crates/mssql-orm-tiberius/: Cargo.toml
crates/mssql-orm-tiberius/src/: config.rs  connection.rs  error.rs  executor.rs  lib.rs  parameter.rs  pool.rs  row.rs  telemetry.rs  transaction.rs
crates/mssql-orm-tiberius/tests/: sqlserver_integration.rs
crates/mssql-orm/src/: active_record.rs  audit_runtime.rs  context.rs  dbset_query.rs  lib.rs  page_request.rs  predicate_composition.rs  query_alias.rs  query_order.rs  query_predicates.rs  query_projection.rs  raw_sql.rs  soft_delete_runtime.rs  tracking.rs
crates/mssql-orm/src/snapshots/: mssql_orm__dbset_query__tests__compiled_include_many_with_root_soft_delete_and_parameters.snap  mssql_orm__dbset_query__tests__compiled_include_one_with_included_tenant_parameter_order.snap  mssql_orm__dbset_query__tests__compiled_include_one_with_soft_delete_and_parameters.snap  mssql_orm__dbset_query__tests__compiled_self_join_repeated_aliases_and_parameter_order.snap
crates/mssql-orm/tests/: active_record_trybuild.rs  stage10_public_active_record.rs  stage16_audit_migrations.rs  stage16_entity_policies.rs  stage16_soft_delete_runtime.rs  stage17_raw_sql.rs  stage18_from_row_derive.rs  stage18_public_projections.rs  stage20_navigation_runtime.rs  stage2_mapping.rs  stage5_public_crud.rs  stage6_public_query_builder.rs  stage6_public_query_builder_snapshots.rs  stage9_relationship_metadata.rs  trybuild.rs
crates/mssql-orm/tests/snapshots/: stage6_public_query_builder_snapshots__public_query_builder_compiled_alias_select.snap  stage6_public_query_builder_snapshots__public_query_builder_compiled_join_select.snap  stage6_public_query_builder_snapshots__public_query_builder_compiled_select.snap
crates/mssql-orm/tests/ui/: active_record_delete_public_valid.rs  active_record_missing_entity_set.rs  active_record_missing_entity_set.stderr  active_record_public_valid.rs  active_record_save_public_valid.rs  audit_fields_duplicate_column.rs  audit_fields_empty_column.rs  audit_fields_tuple_struct.rs  audit_fields_unsupported_attr.rs  audit_fields_unsupported_type.rs  audit_fields_valid.rs  audit_provider_public_valid.rs  audit_values_public_valid.rs  changeset_field_not_option.rs  code_first_public_valid.rs  dbcontext_duplicate_entity_set.rs  dbcontext_invalid_field_type.rs  dbcontext_valid.rs  dbset_include_projection_unavailable.rs  dbset_query_ast_bypass_unavailable.rs  dbset_query_ast_bypass_unavailable.stderr  entity_audit_attr_valid.rs  entity_audit_column_collision.rs  entity_audit_column_symbol_unavailable.rs  entity_audit_missing_type.rs  entity_audit_public_valid.rs  entity_composite_index_valid.rs  entity_duplicate_audit_policy.rs  entity_duplicate_soft_delete_policy.rs  entity_foreign_key_default_schema_valid.rs  entity_foreign_key_empty_segment.rs  entity_foreign_key_invalid_format.rs  entity_foreign_key_invalid_format.stderr  entity_foreign_key_same_target_requires_name.rs  entity_foreign_key_set_null_requires_nullable.rs  entity_foreign_key_structured_missing_column.rs  entity_foreign_key_structured_valid.rs  entity_identity_invalid_type.rs  entity_missing_primary_key.rs  entity_navigation_attr_valid.rs  (+42 more)
docs/: api.md  code-first.md  context.md  core-concepts.md  entity-policies.md  instructions.md  migrations.md  navigation.md  plan_orm_sqlserver_tiberius_code_first.md  projections.md  query-builder.md  quickstart.md  raw-sql.md  relationships.md  repository-audit.md  stability-audit.md  tasks.md  tracking-stability.md  tracking-unit-of-work.md  transactions.md  use-without-downloading.md  worklog.md
docs/adr/: 0001-sql-server-first.md  0002-workspace-boundaries.md  0003-public-api-in-root-crate.md
docs/ai/: README.md  handover-checklist.md  session-template.md
docs/architecture/: overview.md
examples/: README.md
examples/axum-pool/: Cargo.toml  README.md
examples/axum-pool/src/: main.rs
examples/basic-crud/: Cargo.toml  README.md
examples/basic-crud/src/: main.rs
examples/todo-app/: Cargo.toml  README.md  database_update.sql
examples/todo-app/migrations/1777037241551380209_createtodoschema/: down.sql  model_snapshot.json  up.sql
examples/todo-app/migrations/1777037241765419900_verifytodoschemanoop/: down.sql  up.sql
examples/todo-app/migrations/1777038734516571446_addtodolistdescription/: down.sql  up.sql
examples/todo-app/migrations/1777040259904341199_createtodoschema/: down.sql  model_snapshot.json  up.sql
examples/todo-app/migrations/1777040384996663939_createtodoschema/: down.sql
examples/todo-app/scripts/: migration_e2e.sh  smoke_setup.sql
examples/todo-app/src/: db.rs  domain.rs  http.rs  lib.rs  main.rs  queries.rs
