[package]
name = "mssql-orm-cli"
version.workspace = true
edition.workspace = true
description = "Command-line tooling for mssql-orm."

[dependencies]
mssql-orm-migrate.workspace = true
mssql-orm-query.workspace = true
mssql-orm-sqlserver.workspace = true
mssql-orm-tiberius.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
mssql-orm-core.workspace = true
