[package]
name = "mssql-orm-core"
version.workspace = true
edition.workspace = true
description = "Core contracts and shared types for the mssql-orm workspace."

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
rust_decimal = { version = "1", default-features = false, features = ["std"] }
uuid = { version = "1", default-features = false, features = ["std"] }
