[package]
name = "mssql-orm"
version.workspace = true
edition.workspace = true
description = "Public API crate for the mssql-orm workspace."

[features]
default = []
pool-bb8 = ["mssql-orm-tiberius/pool-bb8"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
mssql-orm-core.workspace = true
mssql-orm-macros.workspace = true
mssql-orm-query.workspace = true
mssql-orm-sqlserver.workspace = true
mssql-orm-tiberius.workspace = true
mssql-orm-migrate.workspace = true
rust_decimal = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
insta = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
trybuild = "1"
